navbar responsive completo

--- a/menu/exchange.html
+++ b/menu/exchange.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body class="background__container__exchange"> 
-     <header>
+     <header style="position: fixed; width: 100%; display: flex; flex-direction: column; justify-content: space-between; height: 100%;">
          <nav class="exchange__nav">
             <div class="exchange__nav__bar">
                 <div >
@@ -47,14 +47,27 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="exchange__nav__bar__nft">
                     <div class="exchange__nav__bar__hover">NFTs</div>
                 </div>
-                <div>
+                <div class="exchange__nav__bar__info"> 
                     <div class="exchange__nav__bar__hover">info</div>
                 </div>
             </div>
             <div class="exchange__nav__bar">
+                <div class="language">
+                        <span class="material-icons-outlined exchange__nav__bar__language">
+                        language
+                        </span>
+                   <div class="language__dropdown">
+                       <div class="language__dropdown__text">English</div>
+                       <div class="language__dropdown__text">Español</div>
+                       <div class="language__dropdown__text">Deutsch</div>
+                       <div class="language__dropdown__text">Italiano</div>
+                       <div class="language__dropdown__text">Portugues</div>
+                       <div class="language__dropdown__text">Nederlands</div>
+                   </div>
+                </div>
                 <div>
                     <span class="material-icons-outlined exchange__nav__bar__settings">
                         settings
@@ -64,12 +77,52 @@
                     <button onclick="document.getElementById('wallet').style.display='block'" class="exchange__nav__bar__wallet__button">Connect Wallet</button>
                 </div>
             </div>
+
          </nav>
-         <section class="exchange__subnav ">
-             <h2 class="exchange__subnav__h2" ><a href="./exchange.html" class="exchange__subnav__link exchange__subnav__link__on">Swap</a></h2>
-             <h2 class="exchange__subnav__h2"><a href="./liquidity.html" class="exchange__subnav__link">Liquidity</a></h2>
+         <section>
+
+                        <!--Navbar mobile-->
+            <article class="mobile">
+                <div class="exchange__nav__mobile">
+                    <a href="./exchange.html" class="exchange__nav__mobile__container exchange__nav__mobile__container__on">
+                        <span class="material-icons-outlined">
+                            currency_exchange
+                            </span>
+                        <div class="exchange__nav__mobile__container__text">Trade</div>
+                    </a>
+                    <a href="./farm.html" class="exchange__nav__mobile__container">
+                        <span class="material-icons-outlined">
+                            agriculture
+                            </span>
+                        <div class="exchange__nav__mobile__container__text">Farms</div>
+                    </a>
+                    <a href="./pool.html" class="exchange__nav__mobile__container">
+                        <span class="material-icons-outlined">
+                            pool
+                            </span>
+                        <div class="exchange__nav__mobile__container__text">Pools</div>
+                    </a>
+                    <a href="./nft.html" class="exchange__nav__mobile__container">
+                        <span class="material-icons-outlined">
+                            catching_pokemon
+                            </span>
+                        <div class="exchange__nav__mobile__container__text">NFT</div>
+                    </a>
+                    <a href="./info.html" class="exchange__nav__mobile__container">
+                        <span class="material-icons-outlined">
+                            more_horiz
+                            </span>
+                        <div class="exchange__nav__mobile__container__text">Info</div>
+                    </a>
+                </div>
+            </article>
          </section>
      </header>
+     <br>
+     <article class="exchange__subnav">
+        <h2 class="exchange__subnav__h2" ><a href="./exchange.html" class="exchange__subnav__link exchange__subnav__link__on">Swap</a></h2>
+        <h2 class="exchange__subnav__h2"><a href="./liquidity.html" class="exchange__subnav__link">Liquidity</a></h2>
+    </article>
      <section class="wallet" id="wallet">
         <article class="wallet__fondo">
            <div class="wallet__container">
@@ -80,32 +133,33 @@
                     </span>
             </div>
             <!--grid-->
-            <div>
-                <div>
-                    <img src="" alt="">
-                    <div>Metamask</div>
+            <div class="wallet__grid">
+                <div class="wallet__grid__item">
+                    <img src="../img/metamask.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Metamask</div>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <div>Binance Wallet</div>
+                <div class="wallet__grid__item">
+                    <img src="../img/walletbnb.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Binance Wallet</div>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <div>Coinbase Wallet</div>
+                <div class="wallet__grid__item">
+                    <img src="../img/coinbase.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Coinbase Wallet</div>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <div>... More</div>
+                <div class="wallet__grid__item wallet__grid__item__more">
+                    <span class="material-icons-outlined">
+                        more_horiz
+                        </span>
+                    <div class="wallet__grid__item__text wallet__grid__item__more__text">More</div>
                 </div>
             </div>
-            <div>
-                <div>Haven’t got a crypto wallet yet?</div>
-                <button >Learn How to Connect</button>
+            <div class="wallet__bot">
+                <div class="wallet__bot__text">Haven’t got a crypto wallet yet?</div>
+                <div class="wallet__bot__text"><button class="wallet__bot__button">Learn How to Connect</button></div>
             </div>
            </div>
         </article>
      </section>
-
     
 </body>
 </html>
