terminando html swap

--- a/menu/exchange.html
+++ b/menu/exchange.html
@@ -12,76 +12,77 @@
     <title>Document</title>
 </head>
 <body class="background__container__exchange"> 
-     <header style="position: fixed; width: 100%; display: flex; flex-direction: column; justify-content: space-between; height: 100%;">
-         <nav class="exchange__nav">
-            <div class="exchange__nav__bar">
-                <div >
-                    <a href="../Index.html" class="exchange__nav__bar__logo">
-                        <img src="../img/pokebola.png" alt="" class="exchange__nav__bar__logo__img">
-                        <div class="exchange__nav__bar__logo__pokedex">PokéDEX</div>
-                    </a>
-                </div>
-                <div class="exchange__nav__bar__trade exchange__nav__bar__trade__on " >
-                    <div class="exchange__nav__bar__hover">
-                        <a href="./exchange.html" class="exchange__nav__bar__hover__link exchange__nav__bar__hover__link__on">Trade</a>
+     <header >
+         <nav class="header__nav" >
+            <section class="exchange__nav">
+                <div class="exchange__nav__bar">
+                    <div >
+                        <a href="../Index.html" class="exchange__nav__bar__logo">
+                            <img src="../img/pokebola.png" alt="" class="exchange__nav__bar__logo__img">
+                            <div class="exchange__nav__bar__logo__pokedex">PokéDEX</div>
+                        </a>
                     </div>
-                    <div class="exchange__nav__bar__dropdown">
-                        <div class="exchange__nav__bar__dropdown__div__top">
-                            <a href="./exchange.html"  class="exchange__nav__bar__dropdown__link">Exchange</a>
+                    <div class="exchange__nav__bar__trade exchange__nav__bar__trade__on " >
+                        <div class="exchange__nav__bar__hover">
+                            <a href="./exchange.html" class="exchange__nav__bar__hover__link exchange__nav__bar__hover__link__on">Trade</a>
                         </div>
-                        <div class="exchange__nav__bar__dropdown__div__bot">
-                            <a href="./liquidity.html" class="exchange__nav__bar__dropdown__link">Liquidity</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="exchange__nav__bar__trade exchange__nav__bar__trade__on " >
-                    <div class="exchange__nav__bar__hover">
-                        <a href="./farm.html" class="exchange__nav__bar__hover__link">Earn</a>
-                    </div>
-                    <div class="exchange__nav__bar__dropdown">
-                        <div class="exchange__nav__bar__dropdown__div__top">
-                            <a href="./farm.html"  class="exchange__nav__bar__dropdown__link">Farms</a>
-                        </div>
-                        <div class="exchange__nav__bar__dropdown__div__bot">
-                            <a href="./pool.html" class="exchange__nav__bar__dropdown__link">Pools</a>
+                        <div class="exchange__nav__bar__dropdown">
+                            <div class="exchange__nav__bar__dropdown__div__top">
+                                <a href="./exchange.html"  class="exchange__nav__bar__dropdown__link">Exchange</a>
+                            </div>
+                            <div class="exchange__nav__bar__dropdown__div__bot">
+                                <a href="./liquidity.html" class="exchange__nav__bar__dropdown__link">Liquidity</a>
+                            </div>
                         </div>
                     </div>
+                    <div class="exchange__nav__bar__trade exchange__nav__bar__trade__on " >
+                        <div class="exchange__nav__bar__hover">
+                            <a href="./farm.html" class="exchange__nav__bar__hover__link">Earn</a>
+                        </div>
+                        <div class="exchange__nav__bar__dropdown">
+                            <div class="exchange__nav__bar__dropdown__div__top">
+                                <a href="./farm.html"  class="exchange__nav__bar__dropdown__link">Farms</a>
+                            </div>
+                            <div class="exchange__nav__bar__dropdown__div__bot">
+                                <a href="./pool.html" class="exchange__nav__bar__dropdown__link">Pools</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="exchange__nav__bar__nft">
+                        <div class="exchange__nav__bar__hover">NFTs</div>
+                    </div>
+                    <div class="exchange__nav__bar__info"> 
+                        <div class="exchange__nav__bar__hover">info</div>
+                    </div>
                 </div>
-                <div class="exchange__nav__bar__nft">
-                    <div class="exchange__nav__bar__hover">NFTs</div>
+                <div class="exchange__nav__bar">
+                    <div class="language">
+                            <span class="material-icons-outlined exchange__nav__bar__language">
+                            language
+                            </span>
+                       <div class="language__dropdown">
+                           <div class="language__dropdown__text">English</div>
+                           <div class="language__dropdown__text">Español</div>
+                           <div class="language__dropdown__text">Deutsch</div>
+                           <div class="language__dropdown__text">Italiano</div>
+                           <div class="language__dropdown__text">Portugues</div>
+                           <div class="language__dropdown__text">Nederlands</div>
+                       </div>
+                    </div>
+                    <div>
+                        <span class="material-icons-outlined exchange__nav__bar__settings">
+                            settings
+                            </span>
+                    </div>
+                    <div class="exchange__nav__bar__wallet">
+                        <button onclick="document.getElementById('wallet').style.display='block'" class="exchange__nav__bar__wallet__button">Connect Wallet</button>
+                    </div>
                 </div>
-                <div class="exchange__nav__bar__info"> 
-                    <div class="exchange__nav__bar__hover">info</div>
-                </div>
-            </div>
-            <div class="exchange__nav__bar">
-                <div class="language">
-                        <span class="material-icons-outlined exchange__nav__bar__language">
-                        language
-                        </span>
-                   <div class="language__dropdown">
-                       <div class="language__dropdown__text">English</div>
-                       <div class="language__dropdown__text">Español</div>
-                       <div class="language__dropdown__text">Deutsch</div>
-                       <div class="language__dropdown__text">Italiano</div>
-                       <div class="language__dropdown__text">Portugues</div>
-                       <div class="language__dropdown__text">Nederlands</div>
-                   </div>
-                </div>
-                <div>
-                    <span class="material-icons-outlined exchange__nav__bar__settings">
-                        settings
-                        </span>
-                </div>
-                <div class="exchange__nav__bar__wallet">
-                    <button onclick="document.getElementById('wallet').style.display='block'" class="exchange__nav__bar__wallet__button">Connect Wallet</button>
-                </div>
-            </div>
-
+    
+            </section>
          </nav>
-         <section>
-
-                        <!--Navbar mobile-->
+         <section class="header__nav__mobile">
+                                   <!--Navbar mobile-->
             <article class="mobile">
                 <div class="exchange__nav__mobile">
                     <a href="./exchange.html" class="exchange__nav__mobile__container exchange__nav__mobile__container__on">
@@ -160,6 +161,78 @@
            </div>
         </article>
      </section>
-    
+                                                    <!--SWAP-->
+     <section class="swap__container">
+        <article class="swap" >
+
+            <div class="swap__top">
+                <div class="swap__top__dirrection">
+                    <div>
+                        <span class="material-icons-outlined swap__top__dirrection__span">
+                            leaderboard
+                            </span>
+                    </div>
+                    <h3 class="swap__top__text">Swap </h3>
+                    <div>
+                        <span class="material-icons-outlined swap__top__dirrection__span">
+                            settings
+                            </span>
+                        <span class="material-icons-outlined swap__top__dirrection__span">
+                            restore
+                            </span>
+                        <span class="material-icons-outlined swap__top__dirrection__span">
+                            refresh
+                            </span> 
+                    </div>
+                </div>
+
+                <div >Trade for token an instant</div>
+            </div>
+
+            <div class="swap__middle">
+
+                    <div class="swap__middle__token">   
+                        <img src="../img/walletbnb.png" alt="" class="swap__middle__token__img">
+                        <div>BNB</div>
+                        <div><span class="material-icons-outlined">
+                            expand_more
+                            </span>
+                        </div>
+                    </div>
+                    <div>
+                        <input type="text" value="0.00" class="swap__middle__amount">
+                    </div>
+
+                    <div >
+                        <span class="material-icons-outlined swap__middle__arrow">
+                            import_export
+                            </span>
+                    </div>
+
+                    <div class="swap__middle__token">   
+                        <img src="../img/pokebola.png" alt="" class="swap__middle__token__img">
+                        <div>BALL</div>
+                        <div><span class="material-icons-outlined">
+                            expand_more
+                            </span>
+                        </div>
+                    </div>
+                    <div>
+                        <input type="text" value="0.00" class="swap__middle__amount">
+                    </div>
+                    <div class="swap__bot">
+                        <div class="swap__bot__sli">Slippage Tolerance:</div>
+                        <div class="swap__bot__p">11%</div>
+                    </div> 
+                    <div >
+                        <button class="swap__bot__btn">Swap</button>
+                    </div>   
+            </div>
+        </article>
+    </section>
+                                                    <!--Fin SWAP-->
+    <img src="../img/charizard-fondo.png" alt="" class="jere">
+    <img src="../img/charizard-help.png" alt="" class="ujsi">
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
