--- a/menu/exchange.html
+++ b/menu/exchange.html
@@ -231,8 +231,21 @@
         </article>
     </section>
                                                     <!--Fin SWAP-->
-    <img src="../img/charizard-fondo.png" alt="" class="jere">
     <img src="../img/charizard-help.png" alt="" class="ujsi">
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <footer class="exchange__footer">
+        
+        <a href="../index.html" class="exchange__footer__a" ><img src="../img/PokeDEX.png" alt="" class="exchange__footer__a__img" ></a>
+        <div class="exchange__footer__strategic">
+            <h3 class="exchange__footer__strategic__text">Strategic Partner</h3>
+            <img src="../img/CoderHouse.png" alt=""  class="exchange__footer__strategic__img">
+        </div>
+        <div class="exchange__footer__social">
+            <h3 class="exchange__footer__social__text">Social</h3>
+            <div class="">
+            </div>
+        </div>
+
+</footer>
 </body>
 </html>
